--- a/css/editor.css
+++ b/css/editor.css
@@ -1,7 +1,7 @@
 /* Containers og meta */
 .Editor {
   position: absolute;
-  z-index: 4;
+  z-index: 10;
   left: 0;
   right: 0;
   bottom: 0;
@@ -17,7 +17,6 @@
 }
 .Editor-Card {
   overflow: auto !important;
-  max-height: 1px;
   text-align: left;
   padding: 5px;
   box-sizing: border-box;
@@ -59,7 +58,6 @@
   position: absolute;
   right: 6px;
   background-color: white;
-  z-index: 2;
   opacity: 1;
   transition: all 50ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
