--- a/css/list.css
+++ b/css/list.css
@@ -2,7 +2,7 @@
 
 .list {
   position: absolute;
-  z-index: 4;
+  z-index: 20;
   left: 0;
   right: 0;
   bottom: 0;
